# squashfspec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HOW_TO_RELEASE.md  README.md  pyproject.toml  squashfspec.py  squashfsspec.py  test_driver.py  test_xarray.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-changelog.yml  release.yml  test.yaml  tests.yml  update-lockfiles.yaml
squashfsspec/: __init__.py  squashfsspec.py
tests/: test_driver.py  test_grib.py  test_multi_zarr.py  test_readme.py  test_xarray.py
