[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "squashfsspec"
version = "0.1.0"
readme = "README.md"
description = "A simple fsspec driver for SquashFS files"
requires-python = ">=3.9,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "fsspec", "zarr", "dissect-squashfs>=1.12,<2",
]
optional-dependencies.dev = [
  "pytest",
]

[project.entry-points."fsspec.specs"]
squashfs = "squashfsspec:SquashFSFileSystem"

[tool.setuptools.packages.find]
where = ["."]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "linux-64"]

[tool.pixi.dependencies]
dask = ">=2026.3.0,<2027"
fsspec = ">=2026.3.0,<2027"
netcdf4 = ">=1.7.4,<2"
python = ">=3.10,<3.15"
squashfs-tools = ">=4.7.5,<5"
xarray = ">=2025.6.1,<2027"
zarr = ">=2.18.3,<4"

[tool.pixi.pypi-dependencies]
squashfsspec = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3,<10"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
py310 = { features = ["dev", "py310"], solve-group = "py310" }
py311 = { features = ["dev", "py311"], solve-group = "py311" }
py312 = { features = ["dev", "py312"], solve-group = "py312" }
py313 = { features = ["dev", "py313"], solve-group = "py313" }
py314 = { features = ["dev", "py314"], solve-group = "py314" }

[tool.ruff]
target-version = "py310"
line-length = 80
# Avoid notebook churn from lint-only modernization.
extend-exclude = [ "docs/notebooks/*.ipynb" ]
lint.select = [ "E", "F", "G", "I", "PT", "PTH", "S", "TCH", "UP", "W" ]
lint.ignore = [
  "E203",   # Keep Black-compatible whitespace behaviour
  "PT006",  # Existing parameterize style to be tightened incrementally
  "PT007",  # Existing parameterize value style to be tightened incrementally
  "PTH103", # pathlib migration will be done incrementally
  "PTH118", # pathlib migration will be done incrementally
  "S101",   # Allow assert usage for now (extensive in tests and checks)
  "S311",   # Pseudo-random usage is non-cryptographic in this codebase
  "S603",   # subprocess calls are currently intentional and reviewed manually
  "S607",   # Allow partial executable paths in controlled environments
  "UP006",  # Typing modernization deferred to follow-up cleanup
  "UP007",  # Typing modernization deferred to follow-up cleanup
  "UP022",  # Redirect modernisation deferred to follow-up cleanup
  "UP035",  # Deprecated import migration deferred to follow-up cleanup
  "UP045",  # Optional/Union modernization deferred to follow-up cleanup
]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.isort.import-heading = { first-party = "First-party", local-folder = "Local", standard-library = "Standard library", third-party = "Third-party" }
lint.isort.known-first-party = [ "squashfsspec", "tests" ]

[tool.pylint]
"MESSAGES CONTROL".disable = [
  "C0114", # 'missing-module-docstring', Do not require module docstrings
  "R0901", # 'too-many-ancestors', Allow many layers of sub-classing
  "R0902", # 'too-many-instance-attribtes', Allow many attributes
  "R0913", # 'too-many-arguments', Allow many function arguments
  "R0914", # 'too-many-locals', Allow many local variables
  "W0223", # 'abstract-method', Subclasses do not have to override all abstract methods
]
SIMILARITIES.min-similarity-lines = 10
TYPECHECK.generated-members = [ "numpy.*" ]

[tool.codespell]
ignore-words-list = "fo"
